Added a new header and passage

--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
 <h1> Hello coursera again</h1>
+<h2>This is an updated message</h2>
+<p>I am just <b>trying</b> things out :)</p>
 </body>
 </html>
