I edited the html through terminal.

--- a/site/index.html
+++ b/site/index.html
@@ -9,5 +9,6 @@
 <h1> Hello coursera again</h1>
 <h2>This is an updated message</h2>
 <p>I am just <b>trying</b> things out :)</p>
+<h3>Now I am editing this html doc in Linux through vim command and will try out sublime command later.</h3>
 </body>
 </html>
